--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="GitHub Uploader with AI Assistance" />
-    <title>GitHub Uploader</title>
+    <meta
+      name="description"
+      content="Deploy your website for free in minutes - No technical knowledge required"
+    />
+    <title>Deploy Your Website - Free Hosting</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
