fix: Force rebuild and add environment debugging
- Add build comment to force new deployment
- Add debug logging to config.js to troubleshoot environment detection
- Ensures frontend uses correct production API URL
- Triggers Render to rebuild with latest configuration

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
       content="Deploy your website for free in minutes - No technical knowledge required"
     />
     <title>Deploy Your Website - Free Hosting</title>
+    <!-- Build: 2025-07-12 - Production Ready -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
