Force redeploy with CORS fix

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       content="Deploy your website for free in minutes - No technical knowledge required"
     />
     <title>Deploy Your Website - Free Hosting</title>
-    <!-- Build: 2025-07-12 - Production Ready -->
+    <!-- Build: 2025-07-12-01:18 - Production Ready - CORS Fix -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
