Implement dynamic Render OAuth flow with fallback to manual API key

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,14 @@
       name="description"
       content="Deploy your website for free in minutes - No technical knowledge required"
     />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Deploy Your Website - Free Hosting</title>
-    <!-- Build: 2025-07-12-01:18 - Production Ready - CORS Fix -->
+    <!-- Build: 2025-07-12-02:30 - API URL Fix - Force Cache Refresh -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
